Fix project configuration

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,24 +16,24 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name="com.neurosky.mindwavemobiledemo.DemoActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/app_name" >
+        <activity android:name="com.neurosky.mindwavemobiledemo.BluetoothDeviceDemoActivity"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.neurosky.mindwavemobiledemo.DemoActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name"/>
         <activity android:name="com.neurosky.mindwavemobiledemo.BluetoothAdapterDemoActivity"
             android:screenOrientation="landscape"/>
-         <activity android:name="com.neurosky.mindwavemobiledemo.BluetoothDeviceDemoActivity"
-             android:screenOrientation="landscape"/>
-          <activity android:name="com.neurosky.mindwavemobiledemo.FileDemoActivity"
-              android:screenOrientation="landscape"/>
-          <activity android:name="com.neurosky.mindwavemobiledemo.UARTDemoActivity"
-              android:screenOrientation="landscape"/>
+        <activity android:name="com.neurosky.mindwavemobiledemo.FileDemoActivity"
+            android:screenOrientation="landscape"/>
+        <activity android:name="com.neurosky.mindwavemobiledemo.UARTDemoActivity"
+            android:screenOrientation="landscape"/>
     </application>
 
 </manifest>
